Tue Nov 24 16:48:17 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: small optimization

Mon Nov 23 12:30:27 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/msvc6/libTDS.dsp: Add bulk.c to msvc6 project file

Mon Nov 23 09:48:23 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c src/dblib/bcp.c:
	- Use strtok_r instead of strtok to be more thread safe

Sun Nov 22 16:46:00 EST 2009	JK Lowden <jklowden@freetds.org>
	* src/tds/config.c src/tds/mem.c
	- No error if valid DNS name not in freetds.conf. 
	- Better reporting of server name on login failure. 

Thu Nov 19 09:44:19 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix SQLColAttributes for ODBC 2 clients

Thu Nov 19 09:32:38 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: fix typo in config.c

Fri Nov  6 08:49:07 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c:
	- Fix compatibility problem with "server:port" syntax

Fri Oct 23 15:12:16 EDT 2009	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c exit after -L output
	* src/dblib/dblib.c
	* src/dblib/dbopen.c
	- dbdatecrack follows MSDBLIB, not WIN32
	* src/tds/config.c 
	- do not parse freetds.conf [servername] for instance/port. 

Fri Oct 16 09:58:46 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: Fix dbwritetext with text == NULL

Mon Oct 12 09:26:46 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/prepare_win32.sh:
	- add comments to misc/prepare_win32.sh script

Sat Oct  3 11:19:20 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: unprepare optimization for emulated dynamics

Fri Oct  2 11:23:18 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c src/tds/query.c src/tds/tds_checks.c:
	- Support RPCs using tds 4.2

Thu Oct  1 11:47:53 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c src/tds/iconv.c: